<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/card_default_radius"
    app:cardElevation="@dimen/card_default_elevation"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/date_giant_steps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_giant_steps_date"
            style="@style/DefaultSmallTextStyle"
            android:fontFamily="@font/poppins_semi_bold"
            app:layout_constraintEnd_toStartOf="@+id/as_on_date"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintBottom_toTopOf="@id/first_barrier"
            android:paddingTop="@dimen/card_inner_child_horizontal_padding"
            android:paddingBottom="@dimen/card_inner_child_vertical_padding"
            android:gravity="center_vertical"
            />

        <TextView
            android:id="@+id/as_on_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_as_of_date"
            android:textAlignment="textEnd"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@+id/date_giant_steps"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingVertical="@dimen/card_inner_child_horizontal_padding"
            />

        <View
            android:id="@+id/first_divider"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:background="@drawable/dotted_divider"
            app:layout_constraintTop_toBottomOf="@id/first_barrier" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/first_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="as_on_date,date_giant_steps" />

        <include
            android:id="@+id/target_dual_text"
            layout="@layout/dual_text_target_giant_steps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/circular_progress_giant_steps"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="@id/circular_progress_giant_steps"
            app:layout_constraintBottom_toBottomOf="@id/circular_progress_giant_steps"
            />


        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/circular_progress_giant_steps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:progress="35"
            style="@style/DefaultCircularProgressStyle"
            app:layout_constraintDimensionRatio="1,1"
            app:layout_constraintEnd_toStartOf="@+id/achieved_dual_text"
            app:layout_constraintStart_toEndOf="@+id/target_dual_text"
            app:layout_constraintTop_toBottomOf="@id/first_barrier"
            />

        <include
            android:id="@+id/achieved_dual_text"
            layout="@layout/dual_text_achieved_giant_steps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@+id/circular_progress_giant_steps"
            app:layout_constraintTop_toTopOf="@id/circular_progress_giant_steps"
            app:layout_constraintBottom_toBottomOf="@id/circular_progress_giant_steps"
            />


        <TextView
            android:id="@+id/membership_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/club"
            android:textColor="#323338"
            android:gravity="center"
            app:drawableEndCompat="@drawable/ic_gold"
            tools:viewBindingIgnore="true"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintEnd_toStartOf="@id/membership_text2"
            app:layout_constraintTop_toBottomOf="@id/circular_progress_giant_steps"
            app:layout_constraintHorizontal_chainStyle="packed"
            />

        <TextView
            android:id="@+id/membership_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gold"
            android:textColor="#323338"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/membership_text1"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintTop_toTopOf="@id/membership_text1"
            tools:viewBindingIgnore="true"
            app:layout_constraintBottom_toBottomOf="@id/membership_text1"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/membership_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="membership_text2,membership_text1"
            />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="target_dual_text,achieved_dual_text,circular_progress_giant_steps,membership_text1,membership_text2," />

        <View
            android:id="@+id/second_divider"
            android:layout_width="wrap_content"
            android:layout_height="6dp"
            android:background="@drawable/dotted_divider"
            app:layout_constraintBottom_toBottomOf="@id/eligibility_text_giant_steps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/eligibility_text_giant_steps" />

        <TextView
            android:id="@+id/eligibility_text_giant_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/not_eligible"
            style="@style/DefaultSmallTextStyle"
            app:drawableStartCompat="@drawable/ic_red_dot"
            android:paddingHorizontal="@dimen/card_inner_child_horizontal_padding"
            android:background="@color/white"
            android:layout_marginTop="@dimen/business_card_inner_child_horizontal_padding"
            app:layout_constraintEnd_toEndOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/barrier3" />


        <TextView
            android:id="@+id/earned_progress_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_padding_card"
            android:text="@string/earned"
            style="@style/DefaultSmallTextStyle"
            app:layout_constraintEnd_toStartOf="@+id/horizontal_progress_title"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/eligibility_text_giant_steps" />

        <TextView
            android:id="@+id/horizontal_progress_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wtd_gwp"
            style="@style/DefaultSmallTextStyle"
            app:layout_constraintEnd_toStartOf="@+id/target_progress_title"
            app:layout_constraintStart_toEndOf="@+id/earned_progress_title"
            app:layout_constraintTop_toTopOf="@id/earned_progress_title" />

        <TextView
            android:id="@+id/target_progress_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/target"
            style="@style/DefaultSmallTextStyle"
            app:layout_constraintEnd_toEndOf="@+id/end_guideline"
            app:layout_constraintStart_toEndOf="@+id/horizontal_progress_title"
            app:layout_constraintTop_toTopOf="@id/earned_progress_title" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/horizontal_progress_club"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:progress="30"
            app:indicatorColor="@color/progress_indicator_color_green"
            app:indicatorTrackGapSize="0dp"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/earned_progress_title"
            app:trackColor="@color/progress_track_color_gray"
            app:trackCornerRadius="10dp"
            app:trackThickness="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="7dp"
            />

        <TextView
            android:id="@+id/earned_rupees_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_earned_count"
            android:textColor="@color/progress_indicator_color_green"
            android:textSize="@dimen/text_size_medium"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toStartOf="@+id/target_rupees_progress"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/horizontal_progress_club" />

        <TextView
            android:id="@+id/target_rupees_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_wtd_target"
            android:textColor="@color/dark_blue_color"
            android:textSize="@dimen/text_size_medium"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="@+id/end_guideline"
            app:layout_constraintStart_toEndOf="@+id/earned_rupees_progress"
            app:layout_constraintTop_toTopOf="@id/earned_rupees_progress" />

        <TextView
            android:id="@+id/points_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_inner_child_horizontal_padding"
            android:paddingHorizontal="@dimen/card_inner_child_horizontal_padding"
            tools:text="1.95Cr Away From Diamond Club"
            android:textAlignment="center"
            style="@style/DefaultSmallTextStyle"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/earned_rupees_progress" />


        <Button
            android:id="@+id/giant_steps_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/business_card_inner_child_horizontal_padding"
            android:layout_marginBottom="@dimen/large_padding_card"
            android:backgroundTint="@color/default_widget_color"
            android:text="@string/view_incentive_detail_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/points_text" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/business_card_inner_child_horizontal_padding" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/business_card_inner_child_horizontal_padding" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>