<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="@dimen/card_default_elevation"
        app:cardCornerRadius="@dimen/card_default_radius"
        android:layout_marginTop="@dimen/card_inner_child_horizontal_padding"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_gradient_bg"
            android:paddingHorizontal="@dimen/business_card_inner_child_horizontal_padding"
            android:paddingTop="@dimen/business_card_inner_child_vertical_padding"
            android:paddingVertical="@dimen/large_padding_card"
            >

            <TextView
                android:id="@+id/textview1_giant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicare_plus"
                android:textAllCaps="true"
                android:textColor="@color/light_blue_color"
                style="@style/DefaultSmallTextStyle"
                android:fontFamily="@font/poppins_semi_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview2_giant"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_inner_child_vertical_padding"
                android:text="@string/medicare_subtitle"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintEnd_toStartOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/textview1_giant" />

            <TextView
                android:id="@+id/textview4_giant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/pill_white_stroke"
                android:layout_marginVertical="@dimen/card_inner_child_vertical_padding"
                android:paddingHorizontal="@dimen/card_inner_child_horizontal_padding"
                android:paddingVertical="@dimen/default_small_gap"
                android:text="@string/know_more"
                android:textColor="@color/white"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/barrier"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview2_giant"
                />

            <TextView
                android:layout_width="@dimen/card_image_width"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <ImageView
        android:layout_width="@dimen/card_image_width"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_family"
        android:scaleType="center"
        android:elevation="@dimen/card_default_elevation"
        android:layout_marginEnd="@dimen/card_inner_child_horizontal_padding"
        android:layout_gravity="end"/>
</FrameLayout>